changes in paragraph

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
 </head>
-<p>Welcome to index</p>
+
 <body>
-    
+    <p>Welcome to index updated</p>
 </body>
 </html>
