--- a/basic.html
+++ b/basic.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basics</title>
+    <script src="js/basic.js">
+        
+    </script>
 </head>
 <body>
     <h1>Welcome to basics</h1>
+<label id="name"></label>
 </body>
 </html>
