--- a/login.html
+++ b/login.html
@@ -10,9 +10,21 @@
 </head>
 
 <body>
-    <form name="loginForm">
-        <input type="text" name="username" id="username">
-        <input type="password" name="password" id="password">
+    <form name="loginForm"><br>
+        <div><label for="username">user name</label>
+            <input type="text" name="username" id="username">
+        </div><br>
+        <div><label for="password">password</label>
+            <input type="text" name="password" id="password">
+        </div><br>
+        <div><label for="phone">phone no</label>
+            <input type="text" name="phone" id="phone">
+        </div><br>
+        <div><label for="city">city name</label>
+            <input type="text" name="city" id="city">
+        </div><br>
+
+        
         <button type="button" onclick="onLoginFormSubmit()">Login</button>
     </form>
 
